@@ -1,3 +1,8 @@
+2007-02-12  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* application-tile.c (application_tile_setup): check strings before
+	calling g_str_has_prefix().
+
 2007-02-12  Damien Carbery <damien.carbery@sun.com>
 
 	Fixes #383022
